# ParallelScan

./: CMakeLists.txt  README.md
PrefixSum/: CMakeLists.txt  main.cpp
Scan/: CMakeLists.txt
